...
    <string name="text_check_your_connected_account_and_try_again_57">"Check your connected account and try again."</string>
    <string name="text_no_connection_58">"No connection"</string>
    <string name="text_check_your_internet_connection_and_try_calling_again_59">"Check your internet connection and try calling again."</string>
    <string name="text_allow_60">"Allow"</string>
    <string name="text_ok_61">"OK"</string>
    <string name="text_incoming_call_62">"Incoming call"</string>
    <string name="text_decline_63">"Decline"</string>
    <string name="text_answer_64">"Answer"</string>
    <string name="text_incoming_call_in_the_app_65">"Incoming call in the app"</string>
    <string name="text_service_notification_while_the_incoming_call_screen_is_shown_66">"Service notification while the incoming call screen is shown"</string>
    <string name="text_incoming_calls_67">"Incoming calls"</string>
    <string name="text_ringtone_and_vibration_for_incoming_calls_68">"Ringtone and vibration for incoming calls"</string>
    <string name="text_call_back_69">"Call back"</string>
    <string name="text_value_missed_calls_70">"%1$s — missed calls"</string>
...
